text updates, wallet page overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+a {
+    text-decoration: none;
+}
